# ERROR-108-AWS-Hackathon

./: .gitignore  README.md  config.example.env  customHttp.yml  fix.py  hackathon_battle_plan.md.resolved  parser_fix.py  sample_bug.py  sample_dl.py
cli/: neurotidy.py
frontend/: app.js  index.html  style.css
infrastructure/: deploy.ps1  deploy.sh  template.yaml
knowledge_base/: rules_database.json
lambda/: bedrock_utils.py  bug_explainer.py  code_explainer.py  dl_optimizer.py  github_reviewer.py  handler.py  neurotidy-code-reviewer.2026-03-01.private-key.pem  rag_optimizer.py  requirements.txt  static_analyzer.py
lambda/knowledge_base/: rules_database.json
lone-penguin-site/: contact.html  download.html  index.html
lone-penguin-site/css/: style.css
lone-penguin-site/js/: main.js
neurotidy-package/: LICENSE  README.md  pyproject.toml
neurotidy-package/src/neurotidy/: __init__.py  __main__.py  cli.py
tests/: eval_dataset.py  run_evals.py  sample_code.py  test_api.ps1  test_api.sh  test_github_review.py  test_local.py
